# AICAT

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/aicat/: agent.py  cli_indepth.py  cli_subcluster.py  main_indepth.py  main_scoring.py  main_subcluster.py  utils.py
tests/: test_indepth.py
