[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "example_package_RavenGan"
version = "0.0.1"
authors = [
  { name="Dailin Gan", email="dailin.raven.gan@gmail.com" }
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/RavenGan/AICAT"
Issues = "https://github.com/RavenGan/AICAT/issues"